crates/diffguard-app/src/snapshots/diffguard_app__render__tests__snapshot_markdown_no_findings.snap
---
source: crates/diffguard-app/src/render.rs
expression: md
---
## diffguard — PASS

Scanned **5** file(s), **120** line(s) (scope: `added`, base: `origin/main`, head: `HEAD`)

No findings.
